Implement Admin Waiver Logs and Game Management Modal
1. Backend:
   - `FantasyLogRepository`: Added `findByFantasyGameSeqAndActionOrderByCreatedAtDesc` to fetch logs by action (e.g., DROP).
   - `AdminController`: Added endpoints `getWaiverLogs` (returns DTOs with player/team info) and `getTradeRequests` (placeholder).
   - `FantasyLogDto`: Created inner DTO for admin log responses.

2. Frontend:
   - `admin.html`: Refactored "Manage Games" modal into a comprehensive `gameManageModal` with tabs for Participants, Waiver Logs, and Trade Requests.
   - Implemented logic to switch tabs and fetch data dynamically.

3. Tests:
   - Created `AdminControllerTest` to verify waiver log retrieval logic.

Co-authored-by: YeonDo <26056354+YeonDo@users.noreply.github.com>